merge RMM-940-62305 support for array elements ([]) in chaining